fix: page on mobile not taking full height of view-port

--- a/css/main.scss
+++ b/css/main.scss
@@ -7,6 +7,7 @@
     font-family: 'Roboto', sans-serif;
 } 
 :root{
+    height: 100%;
     font-size: clamp(1rem, 1.2vmax, 3rem);
     --ease-in-overshhot: cubic-bezier(0.6, -0.28, 0.735, 0.045);
     --ease-out-overshhot: cubic-bezier(0.175, 0.885, 0.32, 1.275);
@@ -19,8 +20,7 @@ body{
     --background-color: #efefef;
     --error-color: red;
     color: rgba(var(--text-color), 1);
-    background: url(lighthouse.svg) no-repeat center;
-    background-size: cover;
+    height: calc(100%);
 }
 body[data-theme='dark']{
     --accent-color:#d7b5ff;
@@ -67,6 +67,9 @@ sm-textarea{
 }
 .space-between{
     justify-content: space-between;
+}
+.full-width{
+    width: 100%;
 }
 .hide{
     opacity: 0;
@@ -134,12 +137,13 @@ sm-textarea{
 #main_card{
     height: 100%;
     grid-row: 1/3;
+    background: rgba(var(--foreground-color), 0.9);
 }
 #main_header{
     grid-area: header;
     height: max-content;
     gap: 0.2rem 0.5rem;
-    padding: 1.5rem 0.7rem 1.5rem 1rem;
+    padding: 1rem 0.7rem 1rem 1rem;
     grid-template-columns: 1fr auto;
     grid-template-areas: 'company setting' 'app setting';
 }
@@ -179,7 +183,6 @@ sm-textarea{
     padding: 0.8rem;
     border-radius: 0.5rem;
     &--active{
-        
         .navbar__item__icon{
             fill: var(--accent-color);
         }
@@ -194,7 +197,7 @@ sm-textarea{
     fill: rgba(var(--text-color), 0.7);
 }
 .navbar__item__title{
-    font-size: 0.9rem;
+    font-size: 0.85rem;
     font-weight: 500;
     color: rgba(var(--text-color), 0.7);
 }
@@ -214,7 +217,9 @@ sm-textarea{
     fill: white;
 }
 
-
+#dashboard_page__header{
+    height: 7.5rem;
+}
 #base_header{
     width: 100%;
 }
@@ -224,7 +229,7 @@ sm-textarea{
     color: rgba(var(--text-color), 0.8);
 }
 #send_flo_form{
-    padding: 0 1.5rem;
+    padding: 0 1rem;
     gap: 1rem;
 }
 
@@ -238,7 +243,6 @@ sm-textarea{
     height: 1.2rem;
 }
 #selected_contact_options{
-    margin-top: 0.5rem;
     list-style: none;
 }
 .contact-option{
@@ -295,6 +299,7 @@ sm-textarea{
     border-radius: 0.5rem;
     background: rgba(var(--foreground-color), 1);
     box-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.06);
+    -webkit-tap-highlight-color: transparent;
 }
 .contact-hidden-options{
     position: absolute;
@@ -352,14 +357,10 @@ sm-textarea{
 
 // mobile only styles
 @media all and (max-width: 640px){
-    body{
-        min-height: 100vh;
-    }
     #main_card{
         min-height: 100%;
         grid-template-rows: auto 1fr auto;
         grid-template-areas: 'header' 'page' 'nav';
-        background: rgba(var(--foreground-color), 0.9);
     }
     #main_navbar{
         flex-direction: row;
@@ -379,8 +380,10 @@ sm-textarea{
 // desktop only styles
 @media all and (min-width: 640px){
     body{
-        place-content: center;
-        min-height: 100vh;
+        align-items: center;
+        justify-content: center;
+        background: url(lighthouse.svg) no-repeat center;
+        background-size: cover;
     }
     sm-popup{
         --width: 24rem;
@@ -399,7 +402,6 @@ sm-textarea{
         grid-template-rows: min-content 1fr;
         grid-template-areas: 'header page' 'nav page';
         box-shadow: 0 1.5rem 1.5rem rgba(0, 0, 0, 0.16);
-        background: rgba(var(--foreground-color), 0.9);
     }
     #main_header{
         padding: 1.5rem 1.2rem 1.5rem 2rem;
@@ -409,6 +411,9 @@ sm-textarea{
         height: 100%;
         padding: 0 1rem;
         align-content: flex-start;
+    }
+    .navbar__item__title{
+        font-size: 0.9rem;
     }
     #page_container{
         position: relative;
@@ -425,7 +430,7 @@ sm-textarea{
         }
     }
     .page__header{
-        padding: 2rem 1.5rem;
+        padding: 1.5rem;
     }
     #contacts_container{
         padding: 0 1rem 8rem 2rem;
@@ -433,7 +438,7 @@ sm-textarea{
     #add_contact_button{
         right: 0;
         bottom: 0;
-        margin: 2rem 2.5rem;
+        margin: 2rem;
     }
 }
 @media all and (min-width: 1280px){
